k8s/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: letsencrypt-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        run: letsencrypt-controller
    spec:
      volumes:
      - name: id-rsa
        secret:
          secretName: config
          items:
          - key: ID_RSA
            path: id_rsa
            mode: 0600
          - key: ID_RSA_PUB
            path: id_rsa.pub
            mode: 0600
      containers:
      - name: letsencrypt-controller
        image: $KUBE_IMAGE
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 2
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
        volumeMounts:
        - name: id-rsa
          mountPath: /root/.ssh
        livenessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 10
      restartPolicy: Always
