k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: letsencrypt-controller
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: letsencrypt-controller
