k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: letsencrypt-controller
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: letsencrypt-controller.igloo.be
    http:
      paths:
      - path: /
        backend:
          serviceName: letsencrypt-controller
          servicePort: 80
